=== Safari-130 ===

2004-03-02  Ken Kocienda  <kocienda@apple.com>

        Reviewed by me

        * DOM.subproj/DOM.h: Rollout last night's checkin.
        The tree was closed.

2004-03-01  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3574979>: REGRESSION (129-TOT): crash loading macromedia.com

	deliverResource was being called after it had already been called in setDefersCallbacks:.

        Reviewed by rjw.

        * WebView.subproj/WebBaseResourceHandleDelegate.h:
        * WebView.subproj/WebBaseResourceHandleDelegate.m:
        (-[WebBaseResourceHandleDelegate deliverResource]): set deliveredResource to YES
        (-[WebBaseResourceHandleDelegate deliverResourceAfterDelay]): new, calls deliverResource after a delay
        (-[WebBaseResourceHandleDelegate loadWithRequest:]): call deliverResourceAfterDelay
        (-[WebBaseResourceHandleDelegate setDefersCallbacks:]): call deliverResourceAfterDelay

2004-03-01  Ken Kocienda  <kocienda@apple.com>

        Reviewed by me

        * DOM.subproj/DOM.h: Checked in header copied over
        from WebCore.

2004-03-01  Ken Kocienda  <kocienda@apple.com>

        Reviewed by me

        * DOM.subproj/DOM.h: Oh, it's like the Keystone Cops this afternoon...
	Backed out an unintended change to thsi file.

2004-03-01  Ken Kocienda  <kocienda@apple.com>

        Reviewed by me

        * copy-webcore-files-to-webkit: Dumb typing error on my part in making
	my previous quick fix. This quick fix works. 

2004-03-01  Chris Blumenberg  <cblu@apple.com>

	Updated the WebKit project file to 1.1 because a previous check-in reverted to 1.01.

        * WebKit.pbproj/project.pbxproj:

2004-03-01  Ken Kocienda  <kocienda@apple.com>

        Reviewed by me

        * copy-webcore-files-to-webkit: Made this file buildit-compliant

2004-03-01  Chris Blumenberg  <cblu@apple.com>
