@@ -1,3 +1,13 @@
+2004-03-02  Chris Blumenberg  <cblu@apple.com>
+
+	Fixed: <rdar://problem/3575598>: REGRESSION: Safari crashes at IS&T website
+
+        Reviewed by darin.
+
+        * WebView.subproj/WebDataSource.m:
+        (-[WebDataSourcePrivate dealloc]): don't stop the icon loader here because that can cause an infinite loop
+        (-[WebDataSource _stopLoadingInternal]): always stop the icon loader here instead of just when the data source is loading as well.
+
 === Safari-130 ===
 
 2004-03-02  Ken Kocienda  <kocienda@apple.com>
